made sidebar and notification tray animations faster and fixed spacing

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,20 +1,35 @@
 .navbar {
   background-color: white;
-  height: 60px;
-  padding: 10px 30px;
+  height: 57px;
+  padding: 0px 30px 0px 40px;
   display: flex;
   flex-direction: row;
+}
+
+#brand-logo {
+  height: 29px;
+  padding: 0;
 }
 
 #icons-tray {
+  height: 35px;
+  width: 80px;
   display: flex;
   flex-direction: row;
-  width: 80px;
+  align-items: center;
   justify-content: space-between;
 }
 
-.menu-icons {
+#sidebar-icon {
+  font-size: 34px;
+  position: relative;
+  bottom: 5px;
+}
+
+#notif-icon {
   font-size: 30px;
+  position: relative;
+  bottom: 4px;
 }
 
 a.nav-link {
@@ -26,29 +41,34 @@ a.nav-link:hover {
   color: black;
 }
 
+a.navbar-brand {
+  padding: 0;
+}
+
 /* Sidebar */
 .nav-menu {
   background-color: white;
   color: black;
   max-width: 80vw;
-  width: 400px;
+  width: 380px;
   height: 100vh;
   display: flex;
   justify-content: center;
   position: fixed;
   top: 0;
   right: -100%;
-  transition: 1200ms;
+  transition: 500ms;
 }
 
 .nav-menu.active {
   right: 0;
-  transition: 800ms;
+  transition: 500ms;
 }
 
 .menu-header {
   width: 100%;
   height: 60px;
+  position: static;
   display: flex;
   justify-content: space-between;
   font-size: 30px;
@@ -57,7 +77,7 @@ a.nav-link:hover {
 .menu-items {
   width: 100%;
   overflow: auto;
-  padding: 20px;
+  padding: 20px 30px;
 }
 
 .menu-greeting {
@@ -107,13 +127,19 @@ a.nav-link:hover {
 }
 
 /* Notifications tray */
+.notif-wrapper {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+
 .notif-menu {
   height: 80vh;
   width: 100vw;
   max-width: 500px;
   position: fixed;
   bottom: -100%;
-  transition: 1200ms;
+  transition: 500ms;
   background-color: white;
   color: black;
   border-top: 2px solid black;
@@ -122,13 +148,20 @@ a.nav-link:hover {
 
 .notif-menu.active {
   bottom: 0;
-  transition: 800ms;
+  transition: 500ms;
 }
 
 .notif-toggle {
   width: 100%;
   height: 60px;
   display: flex;
+}
+
+#close-icon {
+  font-size: 30px;
+  position: absolute;
+  top: 14px;
+  left: 15px;
 }
 
 .notif-items {
